docs: LinkGithub and GithubCallback docs
