# docs/swagger.json
@@ -57,6 +57,75 @@
                 }
             }
         },
+        "/connections/github/callback": {
+            "post": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "description": "Handles the OAuth authorization callback sent from Github\nThis endpoint is not meant to be invoked directly, but from Github once authorized from their platform\nSee more: [Github OAuth documentation](https://docs.github.com/en/apps/oauth-apps/building-oauth-apps/authorizing-oauth-apps)",
+                "tags": [
+                    "Connections"
+                ],
+                "summary": "Handles the OAuth authorization callback sent from Github",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "([Github OAuth documentation](https://docs.github.com/en/apps/oauth-apps/building-oauth-apps/authorizing-oauth-apps))",
+                        "name": "state",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Set by Github OAuth. ([Github OAuth documentation](https://docs.github.com/en/apps/oauth-apps/building-oauth-apps/authorizing-oauth-apps))",
+                        "name": "code",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "302": {
+                        "description": "Redirect to profile after successful linking"
+                    },
+                    "404": {
+                        "description": "User or provider invalid (not found)"
+                    },
+                    "409": {
+                        "description": "Already linked"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/connections/github/link": {
+            "post": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "description": "Initiates the request to link an account with Github\nIf the user is logged in, redirect to Github OAuth authorization endpoint to initiate the Github browser authorization flow\nSee more: [Github OAuth documentation](https://docs.github.com/en/apps/oauth-apps/building-oauth-apps/authorizing-oauth-apps)",
+                "tags": [
+                    "Connections"
+                ],
+                "summary": "Initiates the request to link an account with Github",
+                "responses": {
+                    "302": {
+                        "description": "Redirect to Github OAuth authorization endpoint"
+                    },
+                    "401": {
+                        "description": "Not logged in or invalid token"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "Endpoint to log in a user with email and password\nUpon successful login user receives a pair of access token (found in response body) and refresh token (found in cookie: refreshToken)",
